Project

General

Profile

Actions

Bug #65160

open

rgw/lc: A few buckets stuck in UNINITIAL state

Added by Soumya Koduri about 1 month ago. Updated 7 days ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
lifecycle backport_processed
Backport:
quincy reef squid
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We are observing lifecycle policy for certain buckets remains stuck in the UNINITIAL state, when the LC transition policy is applied on multiple buckets.

There are a total of buckets 428 buckets in the LC list, out of which 5 are stuck in the UNINITIAL state for a few days. All belong to the same lc shard of lc.4

-------------- snippet of the buckets stuck ----------

"status": "COMPLETE" 
}, {
"bucket": ":lucileg.356-bucky-4188-12:1e614482-6c1c-49cb-81ef-8fb70c1ff4e8.208655.6",
"shard": "lc.4",
"started": "Thu, 01 Jan 1970 00:00:00 GMT",
"status": "UNINITIAL"
}, {
"bucket": ":lucileg.356-bucky-4188-31:1e614482-6c1c-49cb-81ef-8fb70c1ff4e8.218596.16",
"shard": "lc.4",
"started": "Thu, 01 Jan 1970 00:00:00 GMT",
"status": "UNINITIAL"
}, {
"bucket": ":lucileg.356-bucky-4188-42:1e614482-6c1c-49cb-81ef-8fb70c1ff4e8.208655.24",
"shard": "lc.4",
"started": "Thu, 01 Jan 1970 00:00:00 GMT",
"status": "UNINITIAL"
}, {
"bucket": ":lucileg.356-bucky-4188-63:1e614482-6c1c-49cb-81ef-8fb70c1ff4e8.218596.32",
"shard": "lc.4",
"started": "Thu, 01 Jan 1970 00:00:00 GMT",
"status": "UNINITIAL"
}, {
"bucket": ":lucileg.356-bucky-4188-95:1e614482-6c1c-49cb-81ef-8fb70c1ff4e8.218596.47",
"shard": "lc.4",
"started": "Thu, 01 Jan 1970 00:00:00 GMT",
"status": "UNINITIAL"
}, {
"bucket": ":maryx.267-bucky-4525-37:1e614482-6c1c-49cb-81ef-8fb70c1ff4e8.133978.25",
"shard": "lc.4",
"started": "Wed, 21 Feb 2024 11:08:55 GMT",
"status": "COMPLETE"
}
How reproducible:

Seen intermittently when LC is applied simultaneously on multiple buckets (100 at a time.)

Reproducibility: 2/3 times.

Steps to Reproduce:

1. Create around 100 buckets and upload 10 objects per bucket.
2. Apply an LC rule on all the buckets to transition the objects to a 'cold' storage class.
3. Repeat the test (steps 1 and 2) around 2-3 times.

Actual results:

We observed that 5 buckets are stuck in a UNINITIAL state for a few days.

Expected results:

LC process should not be stuck in a UNINITIAL state.


Related issues 3 (3 open0 closed)

Copied to rgw - Backport #65665: quincy: rgw/lc: A few buckets stuck in UNINITIAL state NewSoumya KoduriActions
Copied to rgw - Backport #65666: squid: rgw/lc: A few buckets stuck in UNINITIAL state Fix Under ReviewSoumya KoduriActions
Copied to rgw - Backport #65667: reef: rgw/lc: A few buckets stuck in UNINITIAL state NewSoumya KoduriActions
Actions #1

Updated by Casey Bodley about 1 month ago

  • Status changed from In Progress to Fix Under Review
  • Tags set to lifecycle
  • Pull request ID set to 56486
Actions #2

Updated by Jane Zhu 10 days ago

Can this be backported to Squid?

Actions #3

Updated by Casey Bodley 7 days ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to quincy reef squid
Actions #4

Updated by Casey Bodley 7 days ago

quincy and reef backports also need https://github.com/ceph/ceph/pull/47595

Actions #5

Updated by Casey Bodley 7 days ago

  • Copied to Backport #65665: quincy: rgw/lc: A few buckets stuck in UNINITIAL state added
Actions #6

Updated by Casey Bodley 7 days ago

  • Copied to Backport #65666: squid: rgw/lc: A few buckets stuck in UNINITIAL state added
Actions #7

Updated by Casey Bodley 7 days ago

  • Copied to Backport #65667: reef: rgw/lc: A few buckets stuck in UNINITIAL state added
Actions #8

Updated by Casey Bodley 7 days ago

  • Tags changed from lifecycle to lifecycle backport_processed
Actions

Also available in: Atom PDF